--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.wrapper{
+ width: 350px;
+ height: 540px;
+ padding: 10px;
+ border-radius: 10px;
+ margin: 20px;
+ background: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.screen{
+  height: 150px;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 0 10px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: black;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+
+.buttonbox{
+  width: 100%;
+  height: calc(100% - 160px);
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: 10px;
+}
+
+button {
+  background-color: #2d3446;
+  font-size: 24px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 10px;
+  outline: none;
+}
+
+button:hover {
+  background-color: rgb(22, 19, 43);
+}
+
+.equals {
+  grid-column: 3 / 5;
+  background-color: rgb(240, 124, 15);
+}
+
+.equals:hover {
+  background-color: rgb(194, 93, 10);
 }
